# sonori

./: .gitignore  Cargo.toml  README.md  config.json  flake.nix
model-conversion/: shell.nix
src/: audio_capture.rs  audio_processor.rs  config.rs  download.rs  lib.rs  main.rs  prelude.rs  real_time_transcriber.rs  silero_audio_processor.rs  stats_reporter.rs  transcribe.rs  transcription_processor.rs  transcription_stats.rs  wayland_connection.rs
src/ui/: app.rs  button.wgsl  button_texture.rs  buttons.rs  common.rs  event_handler.rs  layout_manager.rs  mod.rs  render_pipeline.rs  rounded_rect.wgsl  scrollbar.rs  spectogram.rs  spectogram.wgsl  text_processor.rs  text_renderer.rs  text_window.rs  text_window.wgsl  window.rs
