[package]
name = "sonori"
version = "0.1.0"
edition = "2021"

[dependencies]
portaudio = "0.8.0"
ct2rs = { version = "0.9.6", features = ["whisper"] }
ndarray = "0.16.1"
reqwest = { version = "0.12.14", features = ["stream", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3.31"
anyhow = "1.0.97"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
parking_lot = "0.12.1"
winit = { version = "0.30.5", git = "https://github.com/SergioRibera/winit", branch = "layer_shell" }
raw-window-handle = "0.6.2"
wgpu = "24.0.1"
softbuffer = { version = "0.4.1", default-features = false, features = [
    "wayland",
    "x11",
] }
# wayland-client = "0.31.8"
# wayland-protocols = { version = "0.32.6", features = ["client", "unstable"] }
smithay-client-toolkit = "0.19.2"
pollster = "0.4.0"
rand = "0.9.0"
# x11-dl = "2.21.0"
rustfft = "6.1.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
glyphon = "0.8.0"
# copypasta = "0.10.1"
ort = { version = "2.0.0-rc.8", features = ["load-dynamic", "ndarray"] }
hound = "3.0.0"
image = "0.25.5"
chrono = "0.4.35"

[features]
# Enable runtime CPU feature detection
std = ["std_detect"]
std_detect = []
